# Solana-Prediction-Market

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
app/: package.json  pnpm-lock.yaml
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/earn/: page.tsx
app/src/app/faq/: page.tsx
app/src/app/terms/: page.tsx
app/src/components/: CategoryPills.tsx  ConnectButton.tsx  CopilotPanel.tsx  CreateMarketForm.tsx  FeaturedMarketCard.tsx  Header.tsx  HeroBackground.tsx  HeroNebula.tsx  MarketCard.tsx  MarketDetail.tsx  MarketList.tsx  OrderBook.tsx  PubkeyDisplay.tsx  RedeemWinning.tsx  StatsStrip.tsx  TickerStrip.tsx  Toast.tsx  TradePanel.tsx  UsdcBalance.tsx  VaultDashboard.tsx  VaultTrade.tsx  WalletModal.tsx  WalletProviders.tsx
app/src/lib/: constants.ts  format.ts  solana.ts  usdc.ts
app/src/lib/ai/: prompt.ts  schema.ts
app/src/lib/anchor/: hooks.ts  market.json  market.ts  pdas.ts  sdk.ts  (+7 more)
docs/: architecture.md  demo-runbook.md  demo-script.md  design-playstation-plan.md  pitch-deck.md  whitepaper-lite.md
programs/market/: Cargo.toml
programs/market/src/: errors.rs  lib.rs  state.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: errors.rs  lib.rs  state.rs
programs/oracle/src/instructions/: challenge.rs  finalize.rs  mod.rs  propose.rs
programs/vault/: Cargo.toml
programs/vault/src/: curve.rs  errors.rs  lib.rs  state.rs
scripts/: _common.ts  airdrop-usdc.ts  demo-seed.ts  demo-settle.ts  deploy-devnet.sh
tests/: market.test.ts  settlement.test.ts  vault.test.ts
(+17 files in other folders)
